height 100% reduced to avoid white spaces

--- a/find-coffee-stores/styles/globals.css
+++ b/find-coffee-stores/styles/globals.css
@@ -81,11 +81,13 @@
 
 html,
 body {
+  font-family: "IBMPlexSans"; 
   max-width: 100vw;
   overflow-x: hidden;
 }
 
 body {
+  font-family: "IBMPlexSans";
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -98,18 +100,18 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     color: #373b64;
-    height: 100%;
+  
 }
 
 @font-face {
-  font-family: "IBMPlexSans";
+  font-family: IBMPlexSans;
   font-style: normal;
   font-weight: 500;
   src: url(/fonts/IBMPlexSans-Regular.ttf) format("truetype");
 }
 
 @font-face {
-  font-family: "IBMPlexSans";
+  font-family: IBMPlexSans;
   font-style: normal;
   font-weight: 600;
   src: url(/fonts/IBMPlexSans-SemiBold.ttf) format("truetype");
